feat: display static messages

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,26 @@
-<h1 style="text-align:center">Welcome to our new microblog!</h1>
+<div class="app">
+    <div class="view container">
+        <div class="message-list">
+            <ul class="message-list__ul">
+                <li class="message-list__li">
+                    <div class="message-item">
+                        <span class="message-item__author">FLM</span>
+                        <span class="message-item__content">Hello there!</span>
+                    </div>
+                </li>
+                <li class="message-list__li">
+                    <div class="message-item">
+                        <span class="message-item__author">AJU</span>
+                        <span class="message-item__content">I thrilled</span>
+                    </div>
+                </li>
+            </ul>
+        </div>
+        <div class="messages__footer">
+            Développé avec ♥ par la
+            <a class="messages__footer-link" href="https://github.com/octo-web-front-end-tribe">tribu WEBF</a> © 2017
+            <a class="messages__footer-link" href="http://www.octo.com/fr">OCTO Technology</a>
+        </div>
+    </div>
+</div>
 <router-outlet></router-outlet>
