ref: create message list component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,21 +1,6 @@
 <div class="app">
     <div class="view container">
-        <div class="message-list">
-            <ul class="message-list__ul">
-                <li class="message-list__li">
-                    <div class="message-item">
-                        <span class="message-item__author">FLM</span>
-                        <span class="message-item__content">Hello there!</span>
-                    </div>
-                </li>
-                <li class="message-list__li">
-                    <div class="message-item">
-                        <span class="message-item__author">AJU</span>
-                        <span class="message-item__content">I thrilled</span>
-                    </div>
-                </li>
-            </ul>
-        </div>
+        <mcb-message-list></mcb-message-list>
         <div class="messages__footer">
             Développé avec ♥ par la
             <a class="messages__footer-link" href="https://github.com/octo-web-front-end-tribe">tribu WEBF</a> © 2017
