tech: message component gets data from message list component

--- a/src/app/message-list/message-list.component.html
+++ b/src/app/message-list/message-list.component.html
@@ -1,6 +1,6 @@
 <div class="message-list">
     <ul class="message-list__ul">
-        <mcb-message></mcb-message>
-        <mcb-message></mcb-message>
+        <mcb-message author="FLM" message="I am happy"></mcb-message>
+        <mcb-message [author]="'AJU'" [message]="'Oh really!'"></mcb-message>
     </ul>
 </div>
