--- a/src/app/message/message.component.html
+++ b/src/app/message/message.component.html
@@ -1,6 +1,6 @@
 <li class="message-list__li">
   <div class="message-item">
-    <span class="message-item__author">{{author}}</span>
-    <span class="message-item__content">{{message}}</span>
+    <span class="message-item__author">{{message?.author || 'John Doe'}}</span>
+    <span class="message-item__content">{{message?.content || 'Hello world!'}}</span>
   </div>
 </li>
