ref: rename message.component into message-item.component

--- a/src/app/message-list/message-list.component.html
+++ b/src/app/message-list/message-list.component.html
@@ -1,7 +1,7 @@
 <div class="message-list">
     <ul class="message-list__ul">
         <ng-container *ngFor="let message of messages">
-            <mcb-message [message]="message"></mcb-message>
+            <mcb-message-item [message]="message"></mcb-message-item>
         </ng-container>
     </ul>
 </div>
