feat: add message input

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
 <div class="app">
     <div class="view container">
+        <mcb-message-input></mcb-message-input>
         <mcb-message-list></mcb-message-list>
         <div class="messages__footer">
             Développé avec ♥ par la
