tech: message list component uses fetches data from the service

--- a/src/app/message-list/message-list.component.html
+++ b/src/app/message-list/message-list.component.html
@@ -1,6 +1,6 @@
 <div class="message-list">
     <ul class="message-list__ul">
-        <ng-container *ngFor="let message of messages">
+        <ng-container *ngFor="let message of messagesStoreService.messages">
             <mcb-message-item [message]="message"></mcb-message-item>
         </ng-container>
     </ul>
